# DIST_lab4

./: CMakeLists.txt  README.md
include/: aes_encrypt.h  dirsearch.h  singleton.h
src/: aes_encrypt.cpp  dirsearch.cpp  main.cpp  singleton.cpp
